updating brochure creator

--- a/Brochure/index.html
+++ b/Brochure/index.html
@@ -2,26 +2,10 @@
 <html>
 <head>
 	<title>Brochure Creator</title>
-	<link rel="stylesheet" type="text/css" href="css/brochure.css">
-	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
-
+	<link rel="stylesheet" type="text/css" href="brochure.css">
+	<script type="text/javascript" src="Brochure.js"></script>
 </head>
 <body>
-	<h1>Brochure Creator</h1>
-	<table align="center" cellpadding="10">
-		<tr>
-			<td>First Name</td>
-			<td><input type="text" name="" placeholder="First Name"></td>
-		</tr>
-		<tr>
-			<td>Last Name</td>
-			<td><input type="text" name="" placeholder="Last Name"></td>
-		</tr>
-		
-		
-	</table>
+	testing
 </body>
 </html>
