--- a/Brochure/test.html
+++ b/Brochure/test.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/colorbox.css" type="text/css" />
         <link  rel="Stylesheet" href="css/flyer.css" type="text/css" media="all"/>
         <link rel="stylesheet" type="text/css" href="css/mainFlyer.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="brochure.css">
         <script src="jquery/jquery-1.9.1.min.js" type="text/javascript"></script>   
         <script src="jquery/jquery-1.9.1.min.js" type="text/javascript"></script>
         <script src="jquery/jquery.colorbox.js" type="text/javascript"></script>
@@ -16,35 +17,35 @@
             <div>
          <form onsubmit="" method="post" enctype="multipart/form-data" action="" name="f">
              <!--form start-->
-            <table id="table_sharedform_Cmainfo_nametitle" class="form-body">
+            <table id="table_sharedform_Cmainfo_nametitle" class="form-body" cellpadding="10">
                 <tr>
                     <th colspan="2">
                         <div class="title">
-                            <div style="font-size:large; text-align:left;" >Name and Title :</div>
+                            <div class="tblHead">Name and Title :</div>
                         </div>
-                        <div class="subheader">
+                        <!-- <div class="subheader">
                             <div style="text-align:left;">Leave fields blank if they do not apply </div>
-                        </div>
+                        </div> -->
                     </th>
                 </tr>
                 <tr>
                     <td class="label"><span class="label-required">First Name : </span> </td>
-                    <td class="input"><input  name="name_first" value="" type="text" size="20" maxlength="30" id="name_first"/> </td>
+                    <td class="input"><input  name="name_first" value="" type="text" size="20" placeholder="First Name" maxlength="30" id="name_first"/> </td>
                 </tr>
                 <tr>
                     <td class="label"><span class="label-required">Last Name : </span></td>
-                    <td class="input"><input  name="name_last" value="" type="text" size="20" maxlength="30" id="name_last" /> </td>
+                    <td class="input"><input  name="name_last" value="" type="text" size="20" maxlength="30" placeholder="Last Name" id="name_last" /> </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td class="label">Title :<div class="note">(optional)</div></td>
                     <td class="input"><input name="agent_title" value="" type="text" size="40" maxlength="50" id="agent_title" /></td>
-                </tr>
+                </tr> -->
             </table>
             <br />
             <table id="table_sharedform_Cmainfo_address" class="form-body">
                 <tr>
                     <th colspan="2">
-                        <div class="title" style="font-size:large; text-align:left;">Business Address :</div>
+                        <div class="tblHead" >Business Address :</div>
                     </th>
                 </tr>
                 <tr>
@@ -179,7 +180,7 @@
                     </td>
                      
                     <td class="input">
-                        <%--<div style="margin:2em; text-align:center">
+                        <div style="margin:2em; text-align:center">
                             <div id="divAddress" style="width:400px; margin:0 auto 5em;font-weight:bold;text-align:left"></div>
                             <asp:FileUpload ID="ImgUpload" runat="server" style="width: 400px; background-color:#CCC;" size="65" /><br/>
                                <asp:Button ID="btUpload" runat="server" Text="Upload" OnClientClick="btUploadClick();" style="margin:1em 0; width:150px; font-weight:bold; height:3em;"/><br/>
@@ -189,7 +190,7 @@
                                 <asp:HiddenField ID="hfAgentImgID" runat="server" />
                                 <asp:HiddenField ID="hfUploadSuccess" runat="server" />
                                 <asp:HiddenField ID="hfIsPostback" runat="server" />
-                        </div>--%>
+                        </div>
                     </td>
                 </tr>
                 <tr>
